управление кнопками - функция включения/отключения wifi(app) с запоминанием сети

====================================================================================
===  version 0.7.5 (xx.xx.2023)
====================================================================================
навигация - опциональное изменение модели фильтрации данных
в англ версии слишком короткое название меню (не влезает имя прошивки)
wifi
    wifi-пароль "по умолчанию" (для точек доступа, которые не умеют быть без пароля)
    если не успел подключиться к вифи, отрубается в сон
    баг переключения на другую вифи-сеть (без отключения)
    вифи синхр - если ип сохраняется, то сохранять и порт подключения
    таймаут для автоотключения вифи, если никто не подкл

карта с рисунком трека за крайние 5 мин

приложение:
-    поправить зум карты, чтобы были больше поля
    доработки вращения 3d-трека
    bluetooth
    открытие трека из бинарного файла
    открытие прыга (или списка прыгов) из бинарного файла

====================================================================================
===  version 0.7.4 (2.04.2023)
====================================================================================
- navi
-    баг орицательных координат
-    иногда проскакивают околонулевые координаты (-2000 < raw < +2000)
-    отображение версии прошивки navi-приёмника

- меню wifi-приложению - если запущен wifi-воркер, заходить в более подробное меню:
-    выбранная сеть (можно перевыбрать)
-    наличие подключения к wifi
-    наличие подключения приложения
-    отключение wifi-воркера

- сохранение всех файлов с spiffs на SD-карту
- список треков - пропускать трек, у которого не прочитать заголовок
- убрать кеширование строк меню (постоянная перерисовка)
- всё, кроме viewmain - сделать динамическим

- приложение - тестовый вход, демо-данные берутся с сервера

- приложение: вместо карты - 3D трек поверх картинки с куском карты
-    трек в виде 3d-линии