@@ -123,7 +123,9 @@ Worker<T> funcname(...arg...) {
 ===  version 0.7.5 (xx.xx.2023)
 ====================================================================================
 навигация - опциональное изменение модели фильтрации данных
-в англ версии слишком короткое название меню (не влезает имя прошивки)
+- в англ версии слишком короткое название меню (не влезает имя прошивки)
+- баг ublox-direct-режима у prod-прошивки
+
 wifi
     wifi-пароль "по умолчанию" (для точек доступа, которые не умеют быть без пароля)
     если не успел подключиться к вифи, отрубается в сон
